--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@types/react-dom": "^19.0.2",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
@@ -13,5 +14,19 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "@inertiajs/react": "^2.0.0-beta.3",
+        "@types/react": "^19.0.1",
+        "@typescript-eslint/eslint-plugin": "^8.18.0",
+        "@typescript-eslint/parser": "^8.18.0",
+        "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^9.16.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-react": "^7.37.2",
+        "prettier": "^3.4.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
