--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "dev": "vite",
         "build": "vite build",
-        "dev": "vite"
+        "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
     },
     "devDependencies": {
         "@types/react-dom": "^19.0.2",
